--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   numberpicker: ^2.1.2
   dropdown_button2: ^2.1.4
+  file_picker: ^5.3.1
 
 
 dev_dependencies:
