--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   numberpicker: ^2.1.2
   dropdown_button2: ^2.1.4
   file_picker: ^5.3.1
+  url_launcher: ^6.1.11
 
 
 dev_dependencies:
