--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   dropdown_button2: ^2.1.4
   file_picker: ^5.3.1
   url_launcher: ^6.1.11
+  google_maps_flutter: ^2.3.0
+  geocoding: ^3.0.0
+  flutter_map: ^4.0.0
+  latlong2: ^0.8.2
+  geolocator: ^11.1.0
 
 
 dev_dependencies:
