--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_map: ^4.0.0
   latlong2: ^0.8.2
   geolocator: ^11.1.0
+  flutter_multi_formatter: ^2.13.0
 
 
 dev_dependencies:
